Added code to get 10 hotels at the ideal vacation weather

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1037,6 +1037,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_Weather = city_Weather.loc[city_Weather[\"Humidity\"] <= 100, :]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1211,7 +1220,7 @@
     "\n",
     "plt.scatter(lat,max_temp, marker = \"o\", edgecolor = \"black\")\n",
     "\n",
-    "plt.title(\"Maximum Temperature (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Maximum Temperature (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Temperature (F)\")\n",
     "plt.grid(True)\n",
@@ -1259,7 +1268,7 @@
     "\n",
     "plt.scatter(lat,hum, marker = \"o\", edgecolor = \"black\")\n",
     "\n",
-    "plt.title(\"Humidity (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Humidity (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Humidity %\")\n",
     "plt.grid(True)\n",
@@ -1306,7 +1315,7 @@
     "\n",
     "plt.scatter(lat,cloud, marker = \"o\", edgecolor = \"black\")\n",
     "\n",
-    "plt.title(\"Cloudiness (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Cloudiness (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Cloudiness %\")\n",
     "plt.grid(True)\n",
@@ -1350,7 +1359,7 @@
     "\n",
     "plt.scatter(lat,wind, marker = \"o\", edgecolor = \"black\")\n",
     "\n",
-    "plt.title(\"Wind Speed (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Wind Speed (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Wind Speed (mph)\")\n",
     "plt.grid(True)\n",
@@ -1438,7 +1447,7 @@
     "\n",
     "plt.scatter(n_lat,n_temp, marker = \"o\")\n",
     "\n",
-    "plt.title(\"Maximum Temperature (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Maximum Temperature (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Temperature (F)\")\n",
     "\n",
@@ -1502,7 +1511,7 @@
     "\n",
     "plt.scatter(s_lat,s_temp, marker = \"o\")\n",
     "\n",
-    "plt.title(\"Maximum Temperature (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Maximum Temperature (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Temperature (F)\")\n",
     "\n",
@@ -1566,7 +1575,7 @@
     "\n",
     "plt.scatter(n_lat,n_hum, marker = \"o\")\n",
     "\n",
-    "plt.title(\"Humidity (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Humidity (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Humidity %\")\n",
     "\n",
@@ -1630,7 +1639,7 @@
     "\n",
     "plt.scatter(s_lat,s_hum, marker = \"o\")\n",
     "\n",
-    "plt.title(\"Humidity (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Humidity (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Humidity %\")\n",
     "\n",
@@ -1694,7 +1703,7 @@
     "\n",
     "plt.scatter(n_lat,n_cloud, marker = \"o\")\n",
     "\n",
-    "plt.title(\"Cloudiness (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Cloudiness (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Cloudiness %\")\n",
     "\n",
@@ -1758,7 +1767,7 @@
     "\n",
     "plt.scatter(s_lat,s_cloud, marker = \"o\")\n",
     "\n",
-    "plt.title(\"Cloudiness (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Cloudiness (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Cloudiness %\")\n",
     "\n",
@@ -1824,7 +1833,7 @@
     "\n",
     "plt.scatter(n_lat,n_wind, marker = \"o\")\n",
     "\n",
-    "plt.title(\"Wind Speed (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Wind Speed (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Wind Speed (mph)\")\n",
     "\n",
@@ -1888,7 +1897,7 @@
     "\n",
     "plt.scatter(s_lat,s_wind, marker = \"o\")\n",
     "\n",
-    "plt.title(\"Wind Speed (2/10/2021) vs Latitude\")\n",
+    "plt.title(\"Wind Speed (2/12/2021) vs Latitude\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Wind Speed (mph)\")\n",
     "\n",
