Saved copies of the heatmap and hotel heatmap

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1018,30 +1018,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "city_Weather[\"Humidity\"].max()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cleaning the data frame to only have humidity less than or equal to 100%\n",
+    "city_Weather[\"Humidity\"].max()\n",
+    "\n",
     "city_Weather = city_Weather.loc[city_Weather[\"Humidity\"] <= 100, :]"
    ]
   },
@@ -1382,20 +1365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "northern_hemisphere = city_Weather.loc[city_Weather[\"Lat\"] >= 0, :]\n",
-    "southern_hemisphere = city_Weather.loc[city_Weather[\"Lat\"] <= 0, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Splitting the data frame based on the northern and southern hemisphere\n",
+    "northern_hemisphere = city_Weather.loc[city_Weather[\"Lat\"] >= 0, :]\n",
+    "southern_hemisphere = city_Weather.loc[city_Weather[\"Lat\"] <= 0, :]\n",
+    "\n",
+    "# Creating variables for graphs\n",
     "n_lat = northern_hemisphere[\"Lat\"].astype(float)\n",
     "n_temp = northern_hemisphere[\"Max Temp\"].astype(float)\n",
     "n_hum = northern_hemisphere[\"Humidity\"].astype(float)\n",
